// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feminism evidence ledgers > pins every Statement, kind, source, role, and locator in the feminism ledger 1`] = `
[
  {
    "citations": [
      {
        "locator": "introduction, paragraphs 1–8; section 2, paragraphs 1–3",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "feminism-contested-family",
    "statementKind": "definition",
    "text": "Feminism names multiple, sometimes conflicting analyses and political projects rather than one doctrine or institutional program.",
  },
  {
    "citations": [
      {
        "locator": "introduction, paragraphs 3–8",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "feminism-analysis-action-distinction",
    "statementKind": "editorial-interpretation",
    "text": "Feminist political philosophy both analyzes gendered power and proposes changes to collective institutions, but an analysis does not by itself identify a movement, organization, or program.",
  },
  {
    "citations": [
      {
        "locator": "introduction, paragraphs 1–7; section 1, paragraphs 1–9",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "feminism-public-private-boundary",
    "statementKind": "observation",
    "text": "Feminist political thinkers have treated family, workplaces, reproduction, and civil society as sites of power rather than presuming that only state government is political.",
  },
  {
    "citations": [
      {
        "locator": "sections 1–2.8, headings and introductory classifications",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "feminism-traditions-nonexhaustive",
    "statementKind": "editorial-interpretation",
    "text": "The selected tradition labels are a non-exhaustive navigation aid and transmit no shared doctrine, political subject, or institutional program.",
  },
  {
    "citations": [
      {
        "locator": "section 2.1, paragraphs 1–18",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "liberal-feminism-tradition",
    "statementKind": "observation",
    "text": "The Stanford Encyclopedia identifies liberal feminism as a current in feminist political thought organized around disputed accounts of personal and political autonomy.",
  },
  {
    "citations": [
      {
        "locator": "section 2.2, paragraphs 1–12",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "radical-feminism-tradition",
    "statementKind": "observation",
    "text": "The Stanford Encyclopedia identifies radical feminism as a current that seeks structural change and disputes liberal emphasis on individual choice.",
  },
  {
    "citations": [
      {
        "locator": "section 2.3, paragraphs 1–18",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "socialist-feminism-tradition",
    "statementKind": "observation",
    "text": "The Stanford Encyclopedia identifies socialist feminism as a current concerned with material conditions, class relations, labor, and social reproduction.",
  },
  {
    "citations": [
      {
        "locator": "section 2.3, paragraphs 1–18",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "marxist-feminism-tradition",
    "statementKind": "observation",
    "text": "The Stanford Encyclopedia identifies Marxist feminism as a related but distinct current that analyzes gendered institutions through modes and relations of production and reproduction.",
  },
  {
    "citations": [
      {
        "locator": "section 2.1, paragraphs 1–18",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "liberal-feminism-autonomy",
    "statementKind": "observation",
    "text": "Liberal feminist arguments commonly seek to protect and expand personal and political autonomy while also disputing liberal accounts of family, privacy, and dependency.",
  },
  {
    "citations": [
      {
        "locator": "section 2.2, paragraphs 1–12",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "radical-feminism-structural-boundary",
    "statementKind": "observation",
    "text": "Radical feminist theories distinguish structural gender domination from unequal treatment that can be remedied only through individual choice or formal legal equality.",
  },
  {
    "citations": [
      {
        "locator": "section 2.3, paragraphs 1–18",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "socialist-feminism-material-boundary",
    "statementKind": "observation",
    "text": "Socialist feminist work connects gender hierarchy to class, labor, household relations, and social reproduction.",
  },
  {
    "citations": [
      {
        "locator": "sections 2.1, 2.3, and 2.5",
        "role": "supports",
        "sourceId": "sep-feminist-political-philosophy-source",
      },
    ],
    "id": "formal-substantive-equality-boundary",
    "statementKind": "editorial-interpretation",
    "text": "Formal equality in law does not by itself establish substantive equality in material and social conditions.",
  },
  {
    "citations": [
      {
        "locator": "pp. 139–143",
        "role": "supports",
        "sourceId": "crenshaw-demarginalizing-source",
      },
    ],
    "id": "crenshaw-single-axis-limit",
    "statementKind": "observation",
    "text": "Crenshaw argues that treating race and gender as mutually exclusive categories marginalizes Black women's discrimination claims in law, feminist theory, and antiracist politics.",
  },
  {
    "citations": [
      {
        "locator": "pp. 501–509 and 522–525",
        "role": "supports",
        "sourceId": "mohanty-western-eyes-revisited-source",
      },
    ],
    "id": "mohanty-western-universal-limit",
    "statementKind": "observation",
    "text": "Mohanty argues that cross-border feminist solidarity must be built through historically specific analysis and common political struggle rather than an assumed homogeneous category of Third World women.",
  },
  {
    "citations": [
      {
        "locator": "publisher page, Description paragraphs 1–4",
        "role": "supports",
        "sourceId": "moreton-robinson-talkin-up-source",
      },
    ],
    "id": "moreton-robinson-indigenous-boundary",
    "statementKind": "observation",
    "text": "Moreton-Robinson argues that white Australian feminists' social position affects their authority to represent Indigenous women.",
  },
  {
    "citations": [
      {
        "locator": "pp. 1–2, opening and Primary Principles",
        "role": "supports",
        "sourceId": "koyama-transfeminist-manifesto-source",
      },
    ],
    "id": "koyama-transfeminist-self-description",
    "statementKind": "definition",
    "text": "Koyama describes transfeminism as a movement led principally by and for trans women whose liberation is linked with the liberation of other women and wider coalitions.",
  },
  {
    "citations": [
      {
        "locator": "p. 2, Primary Principles",
        "role": "supports",
        "sourceId": "koyama-transfeminist-manifesto-source",
      },
    ],
    "id": "koyama-body-autonomy",
    "statementKind": "attributed-value",
    "text": "Koyama's manifesto claims individual authority over gender identity, expression, and bodily decisions against political, medical, or religious coercion.",
  },
  {
    "citations": [
      {
        "locator": "p. 1, operational definitions of sex and gender",
        "role": "supports",
        "sourceId": "koyama-transfeminist-manifesto-source",
      },
    ],
    "id": "sex-gender-trans-boundary",
    "statementKind": "definition",
    "text": "Koyama distinguishes sex assignment at birth from gender identity and gender expression.",
  },
  {
    "citations": [
      {
        "locator": "opening paragraphs 1–3",
        "role": "supports",
        "sourceId": "fraser-capital-care-source",
      },
    ],
    "id": "fraser-social-reproduction-definition",
    "statementKind": "definition",
    "text": "Fraser uses social reproduction for material and affective work that sustains people, households, communities, and social bonds, much of it historically assigned to women and unpaid.",
  },
  {
    "citations": [
      {
        "locator": "opening paragraphs 4–12",
        "role": "supports",
        "sourceId": "fraser-capital-care-source",
      },
    ],
    "id": "fraser-care-capitalism-claim",
    "statementKind": "causal-hypothesis",
    "text": "Fraser argues that capitalist accumulation depends on social-reproductive activity while tending to destabilize it; this is a situated theoretical claim, not an observed effect of every market institution.",
  },
  {
    "citations": [
      {
        "locator": "PDF pp. 1–3, opening and sections 1–2",
        "role": "supports",
        "sourceId": "combahee-statement-source",
      },
      {
        "locator": "pp. 15–27 and 109–130",
        "role": "context",
        "sourceId": "taylor-combahee-reader-source",
      },
    ],
    "id": "combahee-self-description",
    "statementKind": "classification",
    "text": "The Combahee River Collective described its politics as Black feminist and socialist.",
  },
  {
    "citations": [
      {
        "locator": "PDF p. 1, opening paragraph",
        "role": "supports",
        "sourceId": "combahee-statement-source",
      },
    ],
    "id": "combahee-opposed-interlocking-oppressions",
    "statementKind": "attributed-value",
    "text": "The Combahee River Collective stated a commitment to struggle against racial, sexual, heterosexual, and class oppression.",
  },
  {
    "citations": [
      {
        "locator": "pp. 109–130, interview with Barbara Smith, Beverly Smith, and Demita Frazier",
        "role": "supports",
        "sourceId": "taylor-combahee-reader-source",
      },
      {
        "locator": "pp. 280–305",
        "role": "supports",
        "sourceId": "harris-kennedy-combahee-source",
      },
    ],
    "id": "combahee-organizing-practice",
    "statementKind": "observation",
    "text": "Between 1974 and 1980, the Boston collective used political education and coalition organizing.",
  },
  {
    "citations": [
      {
        "locator": "pp. 109–130, interview with Barbara Smith, Beverly Smith, and Demita Frazier",
        "role": "supports",
        "sourceId": "taylor-combahee-reader-source",
      },
    ],
    "id": "combahee-selected-campaigns",
    "statementKind": "observation",
    "text": "The collective organized around reproductive freedom, health care, violence against women, and the 1979 murders of Black women in Boston.",
  },
  {
    "citations": [
      {
        "locator": "pp. 1–14 and 109–130",
        "role": "supports",
        "sourceId": "taylor-combahee-reader-source",
      },
    ],
    "id": "combahee-case-boundary",
    "statementKind": "editorial-interpretation",
    "text": "The Combahee River Collective is one bounded Black feminist socialist organization; its statement and practices do not define all Black feminism or later intersectionality.",
  },
  {
    "citations": [
      {
        "locator": "Birth of SEWA, paragraphs 1–8",
        "role": "supports",
        "sourceId": "sewa-history-source",
      },
      {
        "locator": "pp. 13–17",
        "role": "context",
        "sourceId": "ilo-sewa-cooperatives-source",
      },
    ],
    "id": "sewa-union-registration",
    "statementKind": "observation",
    "text": "SEWA registered as a trade union on 12 April 1972.",
  },
  {
    "citations": [
      {
        "locator": "Birth of SEWA, paragraphs 3–8",
        "role": "supports",
        "sourceId": "sewa-history-source",
      },
    ],
    "id": "sewa-worker-definition-contest",
    "statementKind": "observation",
    "text": "SEWA's organizers challenged the claim that workers required a conventional employer before they could register a union.",
  },
  {
    "citations": [
      {
        "locator": "p. 17, Beginnings of the cooperative journey",
        "role": "supports",
        "sourceId": "ilo-sewa-cooperatives-source",
      },
    ],
    "id": "sewa-cooperative-bank",
    "statementKind": "observation",
    "text": "In 1974, 4,000 SEWA members each contributed ten rupees in share capital to establish the SEWA Cooperative Bank.",
  },
  {
    "citations": [
      {
        "locator": "p. 17, Beginnings of the cooperative journey",
        "role": "supports",
        "sourceId": "ilo-sewa-cooperatives-source",
      },
    ],
    "id": "sewa-quilt-cooperative",
    "statementKind": "observation",
    "text": "Ahmedabad quilt makers participating in SEWA formed a producer cooperative in 1977 to market their products.",
  },
  {
    "citations": [
      {
        "locator": "pp. 3, 7, and 13–17",
        "role": "supports",
        "sourceId": "ilo-sewa-cooperatives-source",
      },
      {
        "locator": "History of SEWA, paragraphs 1–6",
        "role": "context",
        "sourceId": "sewa-history-source",
      },
    ],
    "id": "sewa-case-boundary",
    "statementKind": "editorial-interpretation",
    "text": "SEWA's selected Ahmedabad union and cooperative institutions do not represent all informal workers or establish a general model of feminism.",
  },
  {
    "citations": [
      {
        "locator": "archived consolidation dated 1 October 2000, Articles 2, 4, 8, 13, and 36",
        "role": "supports",
        "sourceId": "iceland-parental-leave-law-source",
      },
      {
        "locator": "chapter 18, pp. 370–387, Abstract and Introduction",
        "role": "context",
        "sourceId": "gislason-iceland-leave-source",
      },
    ],
    "id": "iceland-leave-enacted-design",
    "statementKind": "observation",
    "text": "Iceland's 2000 law established a phased design of three non-transferable paid months for each parent plus three months parents could divide, financed and administered through a public leave fund.",
  },
  {
    "citations": [
      {
        "locator": "chapter 18, pp. 370–387, A Policy Success? § Programmatic success, paragraphs 1–5 and Figure 18.1",
        "role": "supports",
        "sourceId": "gislason-iceland-leave-source",
      },
    ],
    "id": "iceland-fathers-uptake",
    "statementKind": "observation",
    "text": "Among eligible Icelandic fathers, leave uptake rose from roughly 0.2–0.3 percent before the reform to 82.4 percent in 2001 and 89.8 percent in 2004.",
  },
  {
    "citations": [
      {
        "locator": "printed pp. 247–249, section 5.1 and Figures 2–4",
        "role": "supports",
        "sourceId": "arnalds-eydal-gislason-leave-source",
      },
    ],
    "id": "iceland-care-work-outcomes",
    "statementKind": "observation",
    "text": "Surveys of Icelandic first-time parents found that fathers performed a larger share of care after the leave reform.",
  },
  {
    "citations": [
      {
        "locator": "printed p. 250, section 5.2 and Figure 5",
        "role": "supports",
        "sourceId": "arnalds-eydal-gislason-leave-source",
      },
    ],
    "id": "iceland-labor-force-participation-gap",
    "statementKind": "observation",
    "text": "Across the surveyed cohorts, the difference between mothers' and fathers' employment rates three years after their first child's birth became smaller.",
  },
  {
    "citations": [
      {
        "locator": "printed pp. 250–251, section 5.2 and Figure 6",
        "role": "supports",
        "sourceId": "arnalds-eydal-gislason-leave-source",
      },
    ],
    "id": "iceland-working-hours-gap",
    "statementKind": "observation",
    "text": "Across the surveyed cohorts, mothers' average paid working hours increased while fathers' average paid working hours decreased.",
  },
  {
    "citations": [
      {
        "locator": "chapter 18, pp. 370–387, A Policy Success? §§ Programmatic success and Counterclaims to success",
        "role": "supports",
        "sourceId": "gislason-iceland-leave-source",
      },
    ],
    "id": "iceland-causal-transfer-limit",
    "statementKind": "observation",
    "text": "The selected Iceland studies do not isolate the leave design from every concurrent social change.",
  },
  {
    "citations": [
      {
        "locator": "chapter 18, pp. 378–379, ‘An Enduring System’, subsection ‘Coping with a financial crisis’, especially the paragraph reporting the largest decrease among high-income fathers",
        "role": "supports",
        "sourceId": "gislason-iceland-leave-source",
      },
    ],
    "id": "iceland-payment-cuts-uptake",
    "statementKind": "observation",
    "text": "Payment cuts during Iceland's financial crisis were associated with reduced leave use by fathers, with the largest drop among fathers with high incomes.",
  },
]
`;

exports[`feminism evidence ledgers > pins every relationship, Case, Episode, Dossier, Guide, and Research Obligation > cases-and-episodes 1`] = `
[
  {
    "conditionStatementIds": [],
    "description": "A bounded study of one Black feminist socialist collective's self-description, political education, and coalition organizing.",
    "endDate": {
      "certainty": "exact",
      "year": 1980,
    },
    "episodeIds": [
      "combahee-organizing-episode",
    ],
    "id": "combahee-river-collective-1974-1980",
    "kind": "case",
    "label": "Combahee River Collective, Boston, 1974–1980",
    "locationIds": [
      "boston",
    ],
    "publicationStatus": "reviewed",
    "scope": "The collective's Boston-area organization and selected campaigns from 1974 to 1980; not all Black feminism, identity politics, or intersectionality.",
    "selectionRationale": "The case tests coalition against a presumed universal womanhood through an organization's own account and independent oral history.",
    "startDate": {
      "certainty": "exact",
      "year": 1974,
    },
  },
  {
    "caseId": "combahee-river-collective-1974-1980",
    "conditionStatementIds": [],
    "description": "The collective's active Boston interval.",
    "endDate": {
      "certainty": "exact",
      "year": 1980,
    },
    "formalRuleStatementIds": [],
    "id": "combahee-organizing-episode",
    "interactionStatementIds": [],
    "kind": "case-episode",
    "label": "Combahee organizing, 1974–1980",
    "locationIds": [
      "boston",
    ],
    "outcomeStatementIds": [],
    "publicationStatus": "reviewed",
    "ruleInUseStatementIds": [
      "combahee-organizing-practice",
    ],
    "scope": "Selected organizing documented in the collective statement and members' oral histories.",
    "startDate": {
      "certainty": "exact",
      "year": 1974,
    },
  },
  {
    "conditionStatementIds": [],
    "description": "A bounded study of trade-union recognition and member-owned cooperative finance for self-employed women workers.",
    "endDate": {
      "certainty": "exact",
      "year": 1977,
    },
    "episodeIds": [
      "sewa-ahmedabad-institutions-episode",
    ],
    "id": "sewa-ahmedabad-1972-1977",
    "kind": "case",
    "label": "SEWA institutions in Ahmedabad, 1972–1977",
    "locationIds": [
      "ahmedabad",
    ],
    "publicationStatus": "reviewed",
    "scope": "Selected Ahmedabad union and cooperative institutions formed from 1972 through 1977; not later SEWA affiliates or informal workers generally.",
    "selectionRationale": "The case connects labor, credit, and women's organizing while preserving organizational and geographic limits.",
    "startDate": {
      "certainty": "exact",
      "year": 1972,
    },
  },
  {
    "caseId": "sewa-ahmedabad-1972-1977",
    "conditionStatementIds": [],
    "description": "The 1972–1977 interval in which the union, cooperative bank, and selected producer cooperative formed.",
    "endDate": {
      "certainty": "exact",
      "year": 1977,
    },
    "formalRuleStatementIds": [],
    "id": "sewa-ahmedabad-institutions-episode",
    "interactionStatementIds": [
      "sewa-worker-definition-contest",
    ],
    "kind": "case-episode",
    "label": "SEWA union and cooperative formation",
    "locationIds": [
      "ahmedabad",
    ],
    "outcomeStatementIds": [
      "sewa-union-registration",
    ],
    "publicationStatus": "reviewed",
    "ruleInUseStatementIds": [
      "sewa-cooperative-bank",
      "sewa-quilt-cooperative",
    ],
    "scope": "Documented Ahmedabad institutions, without generalizing later national membership or outcomes backward.",
    "startDate": {
      "certainty": "exact",
      "year": 1972,
    },
  },
  {
    "conditionStatementIds": [],
    "description": "A bounded study of the 2000 leave design, phased implementation, take-up, care practices, and crisis-era payment changes.",
    "endDate": {
      "certainty": "exact",
      "year": 2018,
    },
    "episodeIds": [
      "iceland-parental-leave-outcomes-episode",
    ],
    "id": "iceland-parental-leave-2000-2018",
    "kind": "case",
    "label": "Iceland paid parental leave evidence, 2000–2018",
    "locationIds": [
      "iceland-modern-state",
    ],
    "publicationStatus": "reviewed",
    "scope": "The law enacted in 2000 and observations collected through 2018, including a 2014 birth cohort; not current Icelandic law or proof that one policy caused every observed gender change.",
    "selectionRationale": "The case distinguishes enacted entitlement, actual uptake, observed outcomes, and causal limits for a care-related institution.",
    "startDate": {
      "certainty": "exact",
      "year": 2000,
    },
  },
  {
    "caseId": "iceland-parental-leave-2000-2018",
    "conditionStatementIds": [],
    "description": "The enacted design and evidence window from 2000 through 2018.",
    "endDate": {
      "certainty": "exact",
      "year": 2018,
    },
    "formalRuleStatementIds": [
      "iceland-leave-enacted-design",
    ],
    "id": "iceland-parental-leave-outcomes-episode",
    "interactionStatementIds": [],
    "kind": "case-episode",
    "label": "Iceland leave design and early outcomes",
    "locationIds": [
      "iceland-modern-state",
    ],
    "outcomeStatementIds": [
      "iceland-care-work-outcomes",
      "iceland-labor-force-participation-gap",
      "iceland-working-hours-gap",
    ],
    "publicationStatus": "reviewed",
    "ruleInUseStatementIds": [
      "iceland-fathers-uptake",
      "iceland-payment-cuts-uptake",
    ],
    "scope": "Formal rules, uptake, and observations collected through 2018, with causal limits kept explicit.",
    "startDate": {
      "certainty": "exact",
      "year": 2000,
    },
  },
]
`;

exports[`feminism evidence ledgers > pins every relationship, Case, Episode, Dossier, Guide, and Research Obligation > presentation 1`] = `
[
  {
    "description": "Feminism names contested movements, analyses, and political projects addressing gendered power and sexist oppression; traditions differ over subjects, causes, institutions, and change, while bounded cases cannot represent the whole family.",
    "id": "feminism-dossier",
    "kind": "dossier",
    "label": "Feminism dossier",
    "publicationStatus": "reviewed",
    "reviewedAt": "2026-09-06",
    "sections": [
      {
        "body": "Feminist analysis asks how power operates through government, work, property, family, sexuality, reproduction, care, culture, and violence.
Feminist movements and organizations may act on those analyses, but an analysis, self-description, external label, organization, and enacted program are different claims and need separate evidence.",
        "heading": "What does feminism name?",
        "id": "meaning",
        "statementIds": [
          "feminism-contested-family",
          "feminism-analysis-action-distinction",
          "feminism-public-private-boundary",
        ],
        "traceStatus": "qualified",
      },
      {
        "body": "Liberal feminist arguments often work through autonomy and equal personhood, while radical feminist theories locate domination in deeper social structures.
Socialist feminist accounts examine how work, class, households, and the reproduction of social life shape gender hierarchy; Marxist feminism is separately identified through its analysis of production and reproduction, and neither label supplies one program.

Crenshaw showed how a single-axis legal framework could erase Black women's discrimination claims.
Mohanty's postcolonial critique rejected a homogeneous “Third World woman,” Moreton-Robinson located white feminist authority within colonial relations, and Koyama's transfeminist manifesto joined trans women's bodily autonomy to wider coalition.
These are situated interventions, not evidence that postcolonial, decolonial, Indigenous, Black, trans, and queer positions form subordinate branches of a complete taxonomy.",
        "heading": "Why isn't feminism one tradition?",
        "id": "traditions",
        "relatedEntityRefs": [
          {
            "id": "feminist-traditions",
            "kind": "collection",
          },
        ],
        "statementIds": [
          "feminism-traditions-nonexhaustive",
          "liberal-feminism-tradition",
          "radical-feminism-tradition",
          "socialist-feminism-tradition",
          "marxist-feminism-tradition",
          "liberal-feminism-autonomy",
          "radical-feminism-structural-boundary",
          "socialist-feminism-material-boundary",
          "crenshaw-single-axis-limit",
          "mohanty-western-universal-limit",
          "moreton-robinson-indigenous-boundary",
          "koyama-transfeminist-self-description",
          "koyama-body-autonomy",
          "sex-gender-trans-boundary",
        ],
        "traceStatus": "qualified",
      },
      {
        "body": "Formal equality in law can matter without establishing substantive equality in material and social conditions.
Fraser's social-reproduction argument directs attention to the paid and unpaid work that sustains people and institutions, while remaining a contested account of capitalism rather than a fact inherited by every feminist tradition.",
        "heading": "Are equal rights enough?",
        "id": "equality-and-material-power",
        "statementIds": [
          "formal-substantive-equality-boundary",
          "fraser-social-reproduction-definition",
          "fraser-care-capitalism-claim",
        ],
        "traceStatus": "qualified",
      },
      {
        "body": "Coalition begins from different positions rather than a presumed universal womanhood.
Caste, class, race, sexuality, disability, citizenship, and colonial position matter only where bounded evidence shows how they shaped a claim or institution; listing them cannot substitute for that evidence.",
        "heading": "Who can a feminist claim speak for?",
        "id": "coalition-and-boundaries",
        "statementIds": [
          "crenshaw-single-axis-limit",
          "mohanty-western-universal-limit",
          "moreton-robinson-indigenous-boundary",
          "sex-gender-trans-boundary",
        ],
        "traceStatus": "qualified",
      },
      {
        "body": "From 1974 to 1980, the Combahee River Collective developed a Black feminist socialist politics in Boston and organized around reproductive freedom, health care, violence against women, and the murders of Black women.
Its members opposed racial, sexual, heterosexual, and class oppression together.
This bounded organization clarifies coalition and self-description, but neither its statement nor the later language of intersectionality defines all Black feminism.",
        "heading": "What can the Combahee collective show?",
        "id": "combahee",
        "relatedEntityRefs": [
          {
            "id": "combahee-river-collective-1974-1980",
            "kind": "case",
          },
        ],
        "statementIds": [
          "combahee-self-description",
          "combahee-organizing-practice",
          "combahee-selected-campaigns",
          "combahee-case-boundary",
        ],
        "traceStatus": "qualified",
      },
      {
        "body": "In Ahmedabad, self-employed women registered SEWA as a trade union in 1972 after contesting the claim that a union required a conventional employer.
Members capitalized a cooperative bank in 1974, and quilt workers formed a producer cooperative in 1977.
The case connects labor, credit, and women's organizing through particular institutions, but cannot stand for feminism or informal workers generally.",
        "heading": "How did SEWA combine union and cooperative institutions?",
        "id": "sewa",
        "relatedEntityRefs": [
          {
            "id": "sewa-ahmedabad-1972-1977",
            "kind": "case",
          },
          {
            "id": "self-employed-worker-unionism",
            "kind": "means",
          },
          {
            "id": "member-owned-cooperative-finance",
            "kind": "means",
          },
        ],
        "statementIds": [
          "sewa-union-registration",
          "sewa-cooperative-bank",
          "sewa-quilt-cooperative",
          "sewa-case-boundary",
        ],
        "traceStatus": "qualified",
      },
      {
        "body": "Iceland's 2000 law phased in three paid months reserved for each parent and three shareable months.
Fathers' uptake rose sharply.
Later surveys separately found more paternal care and a smaller difference between mothers' and fathers' employment rates three years after birth.
Across the surveyed cohorts, mothers' average paid working hours rose while fathers' fell.
Those changes do not prove that feminism was the policy's sole source or that the leave design caused every outcome: other changes occurred, and payment cuts during the financial crisis reduced fathers' use, with the largest drop among high-income fathers.",
        "heading": "What changed under Iceland's 2000 leave design?",
        "id": "iceland",
        "relatedEntityRefs": [
          {
            "id": "iceland-parental-leave-2000-2018",
            "kind": "case",
          },
          {
            "id": "nontransferable-parental-leave",
            "kind": "means",
          },
        ],
        "statementIds": [
          "iceland-leave-enacted-design",
          "iceland-fathers-uptake",
          "iceland-care-work-outcomes",
          "iceland-labor-force-participation-gap",
          "iceland-working-hours-gap",
          "iceland-causal-transfer-limit",
          "iceland-payment-cuts-uptake",
        ],
        "traceStatus": "qualified",
      },
      {
        "body": "Compare formal equality with material power; representation with redistribution; and bodily autonomy with property, labor, care, and protection from violence.
Then ask which actors made each claim, which institution they proposed or used, who could participate, and what the bounded evidence can establish.",
        "heading": "Which distinctions sharpen comparison?",
        "id": "comparisons",
        "statementIds": [
          "formal-substantive-equality-boundary",
          "feminism-analysis-action-distinction",
          "feminism-traditions-nonexhaustive",
        ],
        "traceStatus": "qualified",
      },
    ],
    "standfirst": "Feminism is a contested family of movements, analyses, and political projects concerned with gendered power and sexist oppression.
It is not one doctrine, a women-only identity, a global sequence of “waves,” or a synonym for legal equality; its traditions disagree about political subjects, causes, institutions, and the meaning of freedom.",
    "standfirstStatementIds": [
      "feminism-contested-family",
      "feminism-traditions-nonexhaustive",
      "formal-substantive-equality-boundary",
    ],
    "subject": {
      "id": "feminism",
      "kind": "concept",
    },
  },
  {
    "description": "Feminism is a contested family of movements, analyses, and political projects confronting gendered power and sexist oppression; its traditions disagree over political subjects, material relations, institutions, and change, and no selected organization or policy represents the whole.",
    "id": "guide-feminism",
    "label": "Feminism",
    "primarySubject": {
      "id": "feminism",
      "kind": "concept",
    },
    "publicationStatus": "reviewed",
    "reviewedAt": "2026-09-06",
    "searchQueries": [
      {
        "query": "feminism",
      },
      {
        "query": "what is feminism",
      },
      {
        "query": "feminist traditions",
      },
      {
        "disambiguation": "Intersectionality is an analytic framework with a wider history than this introductory guide can establish.",
        "query": "intersectional feminism",
        "resultStatus": "research-gap",
      },
    ],
    "sections": [
      {
        "heading": "What does feminism mean?",
        "id": "short-answer",
        "narrativeRefs": [
          {
            "dossierId": "feminism-dossier",
          },
        ],
        "role": "short-answer",
      },
      {
        "entityRefs": [
          {
            "id": "feminism",
            "kind": "concept",
          },
        ],
        "heading": "What does the name include—and not include?",
        "id": "meanings-and-boundaries",
        "narrativeRefs": [
          {
            "dossierId": "feminism-dossier",
            "sectionId": "meaning",
          },
          {
            "dossierId": "feminism-dossier",
            "sectionId": "coalition-and-boundaries",
          },
        ],
        "role": "meanings-and-boundaries",
      },
      {
        "entityRefs": [
          {
            "id": "feminist-traditions",
            "kind": "collection",
          },
        ],
        "heading": "Where do feminist traditions disagree?",
        "id": "traditions",
        "narrativeRefs": [
          {
            "dossierId": "feminism-dossier",
            "sectionId": "traditions",
          },
          {
            "dossierId": "feminism-dossier",
            "sectionId": "equality-and-material-power",
          },
        ],
        "researchObligationIds": [
          "feminism-universal-subject-exclusion",
          "feminism-translation-nonwestern-naming",
          "feminism-sex-gender-trans-boundaries",
        ],
        "role": "variants-and-disputes",
      },
      {
        "entityRefs": [
          {
            "id": "self-employed-worker-unionism",
            "kind": "means",
          },
          {
            "id": "member-owned-cooperative-finance",
            "kind": "means",
          },
          {
            "id": "nontransferable-parental-leave",
            "kind": "means",
          },
        ],
        "heading": "Which institutions put claims into practice?",
        "id": "institutions",
        "role": "institutions-and-mechanisms",
        "statementIds": [
          "sewa-union-registration",
          "sewa-cooperative-bank",
          "iceland-leave-enacted-design",
        ],
      },
      {
        "entityRefs": [
          {
            "id": "combahee-river-collective-1974-1980",
            "kind": "case",
          },
          {
            "id": "sewa-ahmedabad-1972-1977",
            "kind": "case",
          },
          {
            "id": "iceland-parental-leave-2000-2018",
            "kind": "case",
          },
        ],
        "heading": "What do three bounded contexts establish?",
        "id": "bounded-practice",
        "narrativeRefs": [
          {
            "dossierId": "feminism-dossier",
            "sectionId": "combahee",
          },
          {
            "dossierId": "feminism-dossier",
            "sectionId": "sewa",
          },
          {
            "dossierId": "feminism-dossier",
            "sectionId": "iceland",
          },
        ],
        "role": "bounded-practice",
      },
      {
        "entityRefs": [
          {
            "id": "socialism",
            "kind": "concept",
          },
          {
            "id": "economic-democracy",
            "kind": "concept",
          },
          {
            "id": "social-ownership",
            "kind": "concept",
          },
        ],
        "heading": "What should be compared next?",
        "id": "comparisons-and-next-steps",
        "narrativeRefs": [
          {
            "dossierId": "feminism-dossier",
            "sectionId": "comparisons",
          },
        ],
        "role": "comparisons-and-next-steps",
      },
      {
        "heading": "What remains unsettled?",
        "id": "open-questions",
        "researchObligationIds": [
          "feminism-universal-subject-exclusion",
          "feminism-translation-nonwestern-naming",
          "feminism-sex-gender-trans-boundaries",
          "feminism-policy-attribution-causal-effects",
        ],
        "role": "open-questions",
      },
    ],
    "slug": "feminism",
  },
]
`;

exports[`feminism evidence ledgers > pins every relationship, Case, Episode, Dossier, Guide, and Research Obligation > relationships 1`] = `
[
  {
    "id": "liberal-feminism-member-feminist-traditions",
    "membership": "qualified",
    "object": {
      "id": "feminist-traditions",
      "kind": "collection",
    },
    "predicate": "member-of",
    "statementIds": [
      "liberal-feminism-tradition",
      "feminism-traditions-nonexhaustive",
    ],
    "status": "qualified",
    "subject": {
      "id": "liberal-feminism",
      "kind": "concept",
    },
  },
  {
    "id": "socialist-feminism-member-feminist-traditions",
    "membership": "qualified",
    "object": {
      "id": "feminist-traditions",
      "kind": "collection",
    },
    "predicate": "member-of",
    "statementIds": [
      "socialist-feminism-tradition",
      "feminism-traditions-nonexhaustive",
    ],
    "status": "qualified",
    "subject": {
      "id": "socialist-feminism",
      "kind": "concept",
    },
  },
  {
    "id": "marxist-feminism-member-feminist-traditions",
    "membership": "qualified",
    "object": {
      "id": "feminist-traditions",
      "kind": "collection",
    },
    "predicate": "member-of",
    "statementIds": [
      "marxist-feminism-tradition",
      "feminism-traditions-nonexhaustive",
    ],
    "status": "qualified",
    "subject": {
      "id": "marxist-feminism",
      "kind": "concept",
    },
  },
  {
    "id": "radical-feminism-member-feminist-traditions",
    "membership": "qualified",
    "object": {
      "id": "feminist-traditions",
      "kind": "collection",
    },
    "predicate": "member-of",
    "statementIds": [
      "radical-feminism-tradition",
      "feminism-traditions-nonexhaustive",
    ],
    "status": "qualified",
    "subject": {
      "id": "radical-feminism",
      "kind": "concept",
    },
  },
  {
    "id": "feminism-citation-1",
    "locator": "introduction, paragraphs 1–8; section 2, paragraphs 1–3",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "feminism-contested-family",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-2",
    "locator": "introduction, paragraphs 3–8",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "feminism-analysis-action-distinction",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-3",
    "locator": "introduction, paragraphs 1–7; section 1, paragraphs 1–9",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "feminism-public-private-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-4",
    "locator": "sections 1–2.8, headings and introductory classifications",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "feminism-traditions-nonexhaustive",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-5",
    "locator": "section 2.1, paragraphs 1–18",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "liberal-feminism-tradition",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-6",
    "locator": "section 2.2, paragraphs 1–12",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "radical-feminism-tradition",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-7",
    "locator": "section 2.3, paragraphs 1–18",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "socialist-feminism-tradition",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-8",
    "locator": "section 2.3, paragraphs 1–18",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "marxist-feminism-tradition",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-9",
    "locator": "section 2.1, paragraphs 1–18",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "liberal-feminism-autonomy",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-10",
    "locator": "section 2.2, paragraphs 1–12",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "radical-feminism-structural-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-11",
    "locator": "section 2.3, paragraphs 1–18",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "socialist-feminism-material-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-12",
    "locator": "sections 2.1, 2.3, and 2.5",
    "object": {
      "id": "sep-feminist-political-philosophy-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "formal-substantive-equality-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-13",
    "locator": "pp. 139–143",
    "object": {
      "id": "crenshaw-demarginalizing-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "crenshaw-single-axis-limit",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-14",
    "locator": "pp. 501–509 and 522–525",
    "object": {
      "id": "mohanty-western-eyes-revisited-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "mohanty-western-universal-limit",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-15",
    "locator": "publisher page, Description paragraphs 1–4",
    "object": {
      "id": "moreton-robinson-talkin-up-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "moreton-robinson-indigenous-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-16",
    "locator": "pp. 1–2, opening and Primary Principles",
    "object": {
      "id": "koyama-transfeminist-manifesto-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "koyama-transfeminist-self-description",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-17",
    "locator": "p. 2, Primary Principles",
    "object": {
      "id": "koyama-transfeminist-manifesto-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "koyama-body-autonomy",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-18",
    "locator": "p. 1, operational definitions of sex and gender",
    "object": {
      "id": "koyama-transfeminist-manifesto-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "sex-gender-trans-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-19",
    "locator": "opening paragraphs 1–3",
    "object": {
      "id": "fraser-capital-care-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "fraser-social-reproduction-definition",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-20",
    "locator": "opening paragraphs 4–12",
    "object": {
      "id": "fraser-capital-care-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "fraser-care-capitalism-claim",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-21",
    "locator": "PDF pp. 1–3, opening and sections 1–2",
    "object": {
      "id": "combahee-statement-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "combahee-self-description",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-22",
    "locator": "PDF p. 1, opening paragraph",
    "object": {
      "id": "combahee-statement-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "combahee-opposed-interlocking-oppressions",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-23",
    "locator": "pp. 15–27 and 109–130",
    "object": {
      "id": "taylor-combahee-reader-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "context",
    "subject": {
      "id": "combahee-self-description",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-24",
    "locator": "pp. 109–130, interview with Barbara Smith, Beverly Smith, and Demita Frazier",
    "object": {
      "id": "taylor-combahee-reader-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "combahee-organizing-practice",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-25",
    "locator": "pp. 109–130, interview with Barbara Smith, Beverly Smith, and Demita Frazier",
    "object": {
      "id": "taylor-combahee-reader-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "combahee-selected-campaigns",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-26",
    "locator": "pp. 280–305",
    "object": {
      "id": "harris-kennedy-combahee-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "combahee-organizing-practice",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-27",
    "locator": "pp. 1–14 and 109–130",
    "object": {
      "id": "taylor-combahee-reader-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "combahee-case-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-28",
    "locator": "Birth of SEWA, paragraphs 1–8",
    "object": {
      "id": "sewa-history-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "sewa-union-registration",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-29",
    "locator": "Birth of SEWA, paragraphs 3–8",
    "object": {
      "id": "sewa-history-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "sewa-worker-definition-contest",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-30",
    "locator": "pp. 13–17",
    "object": {
      "id": "ilo-sewa-cooperatives-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "context",
    "subject": {
      "id": "sewa-union-registration",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-31",
    "locator": "p. 17, Beginnings of the cooperative journey",
    "object": {
      "id": "ilo-sewa-cooperatives-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "sewa-cooperative-bank",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-32",
    "locator": "p. 17, Beginnings of the cooperative journey",
    "object": {
      "id": "ilo-sewa-cooperatives-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "sewa-quilt-cooperative",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-33",
    "locator": "pp. 3, 7, and 13–17",
    "object": {
      "id": "ilo-sewa-cooperatives-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "sewa-case-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-34",
    "locator": "History of SEWA, paragraphs 1–6",
    "object": {
      "id": "sewa-history-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "context",
    "subject": {
      "id": "sewa-case-boundary",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-35",
    "locator": "archived consolidation dated 1 October 2000, Articles 2, 4, 8, 13, and 36",
    "object": {
      "id": "iceland-parental-leave-law-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "iceland-leave-enacted-design",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-36",
    "locator": "chapter 18, pp. 370–387, Abstract and Introduction",
    "object": {
      "id": "gislason-iceland-leave-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "context",
    "subject": {
      "id": "iceland-leave-enacted-design",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-37",
    "locator": "chapter 18, pp. 370–387, A Policy Success? § Programmatic success, paragraphs 1–5 and Figure 18.1",
    "object": {
      "id": "gislason-iceland-leave-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "iceland-fathers-uptake",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-38",
    "locator": "printed pp. 247–249, section 5.1 and Figures 2–4",
    "object": {
      "id": "arnalds-eydal-gislason-leave-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "iceland-care-work-outcomes",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-39",
    "locator": "printed p. 250, section 5.2 and Figure 5",
    "object": {
      "id": "arnalds-eydal-gislason-leave-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "iceland-labor-force-participation-gap",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-40",
    "locator": "printed pp. 250–251, section 5.2 and Figure 6",
    "object": {
      "id": "arnalds-eydal-gislason-leave-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "iceland-working-hours-gap",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-41",
    "locator": "chapter 18, pp. 370–387, A Policy Success? §§ Programmatic success and Counterclaims to success",
    "object": {
      "id": "gislason-iceland-leave-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "iceland-causal-transfer-limit",
      "kind": "statement",
    },
  },
  {
    "id": "feminism-citation-42",
    "locator": "chapter 18, pp. 378–379, ‘An Enduring System’, subsection ‘Coping with a financial crisis’, especially the paragraph reporting the largest decrease among high-income fathers",
    "object": {
      "id": "gislason-iceland-leave-source",
      "kind": "source",
    },
    "predicate": "cites",
    "role": "supports",
    "subject": {
      "id": "iceland-payment-cuts-uptake",
      "kind": "statement",
    },
  },
  {
    "id": "sewa-episode-used-self-employed-worker-unionism",
    "implementation": "mixed",
    "object": {
      "id": "self-employed-worker-unionism",
      "kind": "means",
    },
    "predicate": "used-means",
    "statementIds": [
      "sewa-union-registration",
      "sewa-worker-definition-contest",
    ],
    "status": "qualified",
    "subject": {
      "id": "sewa-ahmedabad-institutions-episode",
      "kind": "case-episode",
    },
  },
  {
    "id": "sewa-episode-used-member-owned-cooperative-finance",
    "implementation": "mixed",
    "object": {
      "id": "member-owned-cooperative-finance",
      "kind": "means",
    },
    "predicate": "used-means",
    "statementIds": [
      "sewa-cooperative-bank",
    ],
    "status": "qualified",
    "subject": {
      "id": "sewa-ahmedabad-institutions-episode",
      "kind": "case-episode",
    },
  },
  {
    "id": "iceland-episode-used-nontransferable-parental-leave",
    "implementation": "mixed",
    "object": {
      "id": "nontransferable-parental-leave",
      "kind": "means",
    },
    "predicate": "used-means",
    "statementIds": [
      "iceland-leave-enacted-design",
      "iceland-fathers-uptake",
      "iceland-payment-cuts-uptake",
    ],
    "status": "qualified",
    "subject": {
      "id": "iceland-parental-leave-outcomes-episode",
      "kind": "case-episode",
    },
  },
]
`;

exports[`feminism evidence ledgers > pins every relationship, Case, Episode, Dossier, Guide, and Research Obligation > research-obligations 1`] = `
[
  {
    "addressedStatementIds": [
      "crenshaw-single-axis-limit",
      "mohanty-western-universal-limit",
      "moreton-robinson-indigenous-boundary",
    ],
    "currentLimitation": "The current evidence establishes three serious critiques but does not compare how exclusion operates across legal claims, transnational representation, Indigenous sovereignty, disability, citizenship, and caste.",
    "description": "A focused comparison of who universal claims exclude and through which institutions.",
    "evidenceNeeded": "Located self-descriptions and independent studies of specific organizations or policy disputes, including participants who contested their categories.",
    "id": "feminism-universal-subject-exclusion",
    "kind": "research-obligation",
    "label": "Exclusion by universal feminist subjects",
    "obligationStatus": "open",
    "obligationType": "counterargument",
    "publicationStatus": "reviewed",
    "question": "When feminist programs claim a common subject, whose interests, authority, or experience do their categories exclude?",
    "reviewedAt": "2026-09-06",
    "scope": "Selected organizations and texts in their named places and periods; no universal hierarchy of exclusions.",
    "statementIds": [],
    "target": {
      "id": "feminism",
      "kind": "concept",
    },
    "targetSectionId": "coalition-and-boundaries",
  },
  {
    "addressedStatementIds": [
      "mohanty-western-universal-limit",
      "moreton-robinson-indigenous-boundary",
      "sewa-case-boundary",
    ],
    "currentLimitation": "English-language sources cannot establish which translated labels or genealogies actors in other settings claim for themselves.",
    "description": "A focused question about self-description across languages and political histories.",
    "evidenceNeeded": "Primary records in original languages, named translators and editions, oral histories where appropriate, and scholarship on local political vocabulary.",
    "id": "feminism-translation-nonwestern-naming",
    "kind": "research-obligation",
    "label": "Translation and non-Western naming",
    "obligationStatus": "open",
    "obligationType": "research-gap",
    "publicationStatus": "reviewed",
    "question": "How do movements outside English-language Western genealogies translate, reject, or rework names rendered as feminism?",
    "reviewedAt": "2026-09-06",
    "scope": "Bounded organizations and language communities; no presumption that an English family label travels unchanged.",
    "statementIds": [],
    "target": {
      "id": "feminism",
      "kind": "concept",
    },
  },
  {
    "addressedStatementIds": [
      "sex-gender-trans-boundary",
      "koyama-transfeminist-self-description",
      "koyama-body-autonomy",
      "radical-feminism-structural-boundary",
    ],
    "currentLimitation": "One transfeminist manifesto and an overview of radical-feminist disputes do not represent the strongest rival positions or their institutional effects.",
    "description": "A focused dispute over political subjects and institutional consequences.",
    "evidenceNeeded": "Located primary arguments from trans-inclusive and critical positions, testimony from affected groups, and policy-specific evidence that distinguishes claims from outcomes.",
    "id": "feminism-sex-gender-trans-boundaries",
    "kind": "research-obligation",
    "label": "Sex, gender, and trans boundaries",
    "obligationStatus": "open",
    "obligationType": "counterargument",
    "publicationStatus": "reviewed",
    "question": "How do rival feminist accounts of sex, gender, sexuality, and trans membership change proposed rules for bodily autonomy, safety, care, and association?",
    "reviewedAt": "2026-09-06",
    "scope": "Named debates and institutions rather than a binary verdict about all feminists or trans people.",
    "statementIds": [],
    "target": {
      "id": "feminism",
      "kind": "concept",
    },
    "targetSectionId": "traditions",
  },
  {
    "addressedStatementIds": [
      "formal-substantive-equality-boundary",
      "iceland-leave-enacted-design",
      "iceland-fathers-uptake",
      "iceland-care-work-outcomes",
      "iceland-labor-force-participation-gap",
      "iceland-working-hours-gap",
      "iceland-causal-transfer-limit",
    ],
    "currentLimitation": "The Iceland evidence documents design, take-up, and longitudinal change but does not make feminism the sole author or isolate every causal pathway.",
    "description": "A causal question separating feminist advocacy, enacted design, use, and outcomes.",
    "evidenceNeeded": "Legislative histories that identify advocates, quasi-experimental or comparative designs, distributional results by income and family form, and rival explanations.",
    "id": "feminism-policy-attribution-causal-effects",
    "kind": "research-obligation",
    "label": "Feminist policy attribution and causal effects",
    "obligationStatus": "open",
    "obligationType": "counterfactual",
    "publicationStatus": "reviewed",
    "question": "Which actors attributed a policy to feminist aims, and what would likely have happened to its distributional outcomes without the policy?",
    "reviewedAt": "2026-09-06",
    "scope": "The Iceland 2000 reform and separately selected policies with comparable institutional and outcome data.",
    "statementIds": [],
    "target": {
      "id": "feminism",
      "kind": "concept",
    },
  },
]
`;

exports[`feminism evidence ledgers > pins the complete Work and Source manifestation metadata ledger 1`] = `
[
  {
    "base": "sep-feminist-political-philosophy",
    "source": {
      "contributorDisplay": [
        "Noëlle McAfee",
        "Katie B. Howard",
      ],
      "identifiers": undefined,
      "publicationYear": 2023,
      "publisher": "Stanford Encyclopedia of Philosophy",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://plato.stanford.edu/entries/feminism-political/",
        },
      ],
      "sourceType": "web-page",
      "title": "Feminist Political Philosophy",
      "workId": "sep-feminist-political-philosophy-work",
    },
    "work": {
      "originalPublicationYear": 2009,
      "title": "Feminist Political Philosophy",
      "workType": "article",
    },
  },
  {
    "base": "combahee-statement",
    "source": {
      "contributorDisplay": [
        "Combahee River Collective",
      ],
      "identifiers": undefined,
      "publicationYear": undefined,
      "publisher": "LGBTQ History Digital Collaboratory",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "archive",
          "url": "https://www.lgbtqhistory.org/wp-content/uploads/2019/04/Combahee_River_Collective_Statement.pdf",
        },
      ],
      "sourceType": "edition",
      "title": "The Combahee River Collective Statement",
      "workId": "combahee-statement-work",
    },
    "work": {
      "originalPublicationYear": 1977,
      "title": "The Combahee River Collective Statement",
      "workType": "other",
    },
  },
  {
    "base": "taylor-combahee-reader",
    "source": {
      "contributorDisplay": [
        "Keeanga-Yamahtta Taylor",
        "Barbara Smith",
        "Beverly Smith",
        "Demita Frazier",
      ],
      "identifiers": {
        "isbn13": "9781608468553",
      },
      "publicationYear": 2017,
      "publisher": "Haymarket Books",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://www.haymarketbooks.org/books/1108-how-we-get-free",
        },
      ],
      "sourceType": "edition",
      "title": "How We Get Free: Black Feminism and the Combahee River Collective",
      "workId": "taylor-combahee-reader-work",
    },
    "work": {
      "originalPublicationYear": 2017,
      "title": "How We Get Free: Black Feminism and the Combahee River Collective",
      "workType": "book",
    },
  },
  {
    "base": "crenshaw-demarginalizing",
    "source": {
      "contributorDisplay": [
        "Kimberlé W. Crenshaw",
      ],
      "identifiers": undefined,
      "publicationYear": 1989,
      "publisher": "University of Chicago Legal Forum",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "authorized-reading",
          "url": "https://scholarship.law.columbia.edu/faculty_scholarship/3007/",
        },
      ],
      "sourceType": "article",
      "title": "Demarginalizing the Intersection of Race and Sex",
      "workId": "crenshaw-demarginalizing-work",
    },
    "work": {
      "originalPublicationYear": 1989,
      "title": "Demarginalizing the Intersection of Race and Sex",
      "workType": "article",
    },
  },
  {
    "base": "harris-kennedy-combahee",
    "source": {
      "contributorDisplay": [
        "Duchess Harris",
      ],
      "identifiers": {
        "doi": "10.18574/nyu/9780814790380.003.0019",
      },
      "publicationYear": 2001,
      "publisher": "New York University Press",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://www.degruyterbrill.com/document/doi/10.18574/nyu/9780814790380.003.0019/html?lang=en",
        },
      ],
      "sourceType": "article",
      "title": "From the Kennedy Commission to the Combahee Collective: Black Feminist Organizing, 1960–80",
      "workId": "harris-kennedy-combahee-work",
    },
    "work": {
      "originalPublicationYear": 2001,
      "title": "From the Kennedy Commission to the Combahee Collective: Black Feminist Organizing, 1960–80",
      "workType": "article",
    },
  },
  {
    "base": "mohanty-western-eyes-revisited",
    "source": {
      "contributorDisplay": [
        "Chandra Talpade Mohanty",
      ],
      "identifiers": {
        "doi": "10.1086/342914",
      },
      "publicationYear": 2003,
      "publisher": "Signs",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://www.jstor.org/stable/10.1086/342914",
        },
      ],
      "sourceType": "article",
      "title": "Under Western Eyes Revisited: Feminist Solidarity through Anticapitalist Struggles",
      "workId": "mohanty-western-eyes-revisited-work",
    },
    "work": {
      "originalPublicationYear": 2003,
      "title": "Under Western Eyes Revisited: Feminist Solidarity through Anticapitalist Struggles",
      "workType": "article",
    },
  },
  {
    "base": "moreton-robinson-talkin-up",
    "source": {
      "contributorDisplay": [
        "Aileen Moreton-Robinson",
      ],
      "identifiers": {
        "isbn13": "9781452966892",
      },
      "publicationYear": 2021,
      "publisher": "University of Minnesota Press",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://www.upress.umn.edu/9781452966892/talkin-up-to-the-white-woman/",
        },
      ],
      "sourceType": "edition",
      "title": "Talkin’ Up to the White Woman: Indigenous Women and Feminism",
      "workId": "moreton-robinson-talkin-up-work",
    },
    "work": {
      "originalPublicationYear": 2000,
      "title": "Talkin’ Up to the White Woman: Indigenous Women and Feminism",
      "workType": "book",
    },
  },
  {
    "base": "koyama-transfeminist-manifesto",
    "source": {
      "contributorDisplay": [
        "Emi Koyama",
      ],
      "identifiers": undefined,
      "publicationYear": 2001,
      "publisher": "eminism.org",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "authorized-reading",
          "url": "https://eminism.org/readings/pdf-rdg/tfmanifesto.pdf",
        },
      ],
      "sourceType": "edition",
      "title": "The Transfeminist Manifesto",
      "workId": "koyama-transfeminist-manifesto-work",
    },
    "work": {
      "originalPublicationYear": 2001,
      "title": "The Transfeminist Manifesto",
      "workType": "other",
    },
  },
  {
    "base": "fraser-capital-care",
    "source": {
      "contributorDisplay": [
        "Nancy Fraser",
      ],
      "identifiers": {
        "doi": "10.64590/nt2",
      },
      "publicationYear": 2016,
      "publisher": "New Left Review",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://newleftreview.org/issues/ii100/articles/nancy-fraser-contradictions-of-capital-and-care",
        },
      ],
      "sourceType": "article",
      "title": "Contradictions of Capital and Care",
      "workId": "fraser-capital-care-work",
    },
    "work": {
      "originalPublicationYear": 2016,
      "title": "Contradictions of Capital and Care",
      "workType": "article",
    },
  },
  {
    "base": "sewa-history",
    "source": {
      "contributorDisplay": [
        "Self Employed Women's Association",
      ],
      "identifiers": undefined,
      "publicationYear": undefined,
      "publisher": "Self Employed Women's Association",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://www.sewa.org/about-us/history/",
        },
      ],
      "sourceType": "web-page",
      "title": "History of SEWA",
      "workId": "sewa-history-work",
    },
    "work": {
      "originalPublicationYear": undefined,
      "title": "History of SEWA",
      "workType": "other",
    },
  },
  {
    "base": "ilo-sewa-cooperatives",
    "source": {
      "contributorDisplay": [
        "Tara Sinha",
      ],
      "identifiers": {
        "isbn13": "9789220309766",
      },
      "publicationYear": 2018,
      "publisher": "International Labour Organization",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://www.ilo.org/sites/default/files/wcmsp5/groups/public/%40ed_emp/%40emp_ent/%40coop/documents/publication/wcms_633752.pdf",
        },
      ],
      "sourceType": "report",
      "title": "Advancing cooperation among women workers in the informal economy: The SEWA way",
      "workId": "ilo-sewa-cooperatives-work",
    },
    "work": {
      "originalPublicationYear": 2018,
      "title": "Advancing cooperation among women workers in the informal economy: The SEWA way",
      "workType": "report",
    },
  },
  {
    "base": "iceland-parental-leave-law",
    "source": {
      "contributorDisplay": [
        "Alþingi",
      ],
      "identifiers": undefined,
      "publicationYear": 2000,
      "publisher": "Alþingi",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "authorized-reading",
          "url": "https://www.althingi.is/lagas/125b/2000095.html",
        },
      ],
      "sourceType": "legal-text",
      "title": "Lög um fæðingar- og foreldraorlof, nr. 95/2000",
      "workId": "iceland-parental-leave-law-work",
    },
    "work": {
      "originalPublicationYear": 2000,
      "title": "Lög um fæðingar- og foreldraorlof, nr. 95/2000",
      "workType": "law",
    },
  },
  {
    "base": "gislason-iceland-leave",
    "source": {
      "contributorDisplay": [
        "Ásdís Aðalbjörg Arnalds",
        "Guðný Björk Eydal",
        "Ingólfur V. Gíslason",
      ],
      "identifiers": {
        "doi": "10.1093/oso/9780192856296.003.0018",
      },
      "publicationYear": 2022,
      "publisher": "Oxford University Press",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://academic.oup.com/book/44441/chapter/376663976",
        },
      ],
      "sourceType": "edition",
      "title": "Paid Parental Leave in Iceland: Increasing Gender Equality at Home and on the Labour Market",
      "workId": "gislason-iceland-leave-work",
    },
    "work": {
      "originalPublicationYear": 2022,
      "title": "Paid Parental Leave in Iceland: Increasing Gender Equality at Home and on the Labour Market",
      "workType": "other",
    },
  },
  {
    "base": "arnalds-eydal-gislason-leave",
    "source": {
      "contributorDisplay": [
        "Ásdís A. Arnalds",
        "Guðný Björk Eydal",
        "Ingólfur V. Gíslason",
      ],
      "identifiers": {
        "doi": "10.13177/irpa.a.2021.17.2.5",
      },
      "publicationYear": 2021,
      "publisher": "Icelandic Review of Politics & Administration",
      "resourceLinks": [
        {
          "label": "Open the consulted source",
          "purpose": "publisher",
          "url": "https://irpa.is/index.php/irpa/article/view/a.2021.17.2.5",
        },
      ],
      "sourceType": "article",
      "title": "Maternity, paternity, and parental leave: Origin, changes, and impact of a law that aims at encouraging leave use of both parents",
      "workId": "arnalds-eydal-gislason-leave-work",
    },
    "work": {
      "originalPublicationYear": 2021,
      "title": "Maternity, paternity, and parental leave: Origin, changes, and impact of a law that aims at encouraging leave use of both parents",
      "workType": "article",
    },
  },
]
`;
